[project]
name = "tutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.2.104",
    "fastapi>=0.115.0",
    "gradio>=6.19.0",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "playwright>=1.60.0",
]
